--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -4,6 +4,8 @@
 	display: flex;
 	align-items: center;
 
+	height: 44px;
+
 	border: 1px solid transparent;
 	border-radius: var(--brad-base);
 }
@@ -52,6 +54,7 @@
 	color: var(--faint-strong);
 
 	font-size: var(--fs-xs);
+	line-height: var(--lh-xss);
 
 	background-color: transparent;
 
