--- a/src/assets/SvgAssets.css
+++ b/src/assets/SvgAssets.css
@@ -3,16 +3,20 @@
 	flex-wrap: wrap;
 	gap: 20px;
 
-	font-size: 8px;
+	font-size: 12px;
 }
 
 .svg-item {
 	display: grid;
-	grid-template-rows: min-content min-content;
-	align-content: center;
+	grid-row-gap: 2px;
+	grid-template-rows: 1fr min-content;
+	align-items: center;
 	justify-items: center;
 
 	padding: 2px;
+}
 
-	border: 1px solid #333333;
+.svg-item svg {
+	width: 26px;
+	height: auto;
 }
