--- a/src/assets/SvgAssets.css
+++ b/src/assets/SvgAssets.css
@@ -1,3 +1,11 @@
+.svg-template code {
+	padding: 4px;
+
+	font-weight: 700;
+
+	background-color: rgb(194 194 194 / 0.2);
+}
+
 .svg-wrapper {
 	display: flex;
 	flex-wrap: wrap;
