--- a/src/components/Table/Pagination.css
+++ b/src/components/Table/Pagination.css
@@ -86,6 +86,10 @@
 	cursor: pointer;
 }
 
+.ui-kit-pagination-button [aria-label="left"] {
+	transform: rotate(180deg);
+}
+
 .ui-kit-pagination .ui-kit-pagination-button:disabled {
 	cursor: not-allowed;
 	opacity: 0.5;
