--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -3,6 +3,7 @@
 
 	display: flex;
 	align-items: center;
+	width: 100%;
 
 	height: 44px;
 
@@ -115,6 +116,7 @@
 
 .ui-kit-input {
 	flex: 1 1;
+	width: 100%;
 
 	height: 100%;
 	padding: 14px;
