--- a/src/components/Select/select.css
+++ b/src/components/Select/select.css
@@ -1,29 +1,46 @@
-.ui-kit-select-container {
+.ui-kit-select-content-container {
 	position: relative;
 
 	width: 100%;
 }
+.ui-kit-select-container:not([data-error=""]) .ui-kit-select__control {
+	outline: 1px solid var(--critic-strong);
+}
+.ui-kit-select-container[data-theme="gray"] .ui-kit-select__control {
+	background: var(--faint-weak);
+}
+
+.ui-kit-select-container {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+}
+
 .ui-kit-select-label-container {
 	position: absolute;
 	top: calc(50% - 7px);
 	left: 15px;
 	z-index: 0;
+
 	line-height: 1;
+
 	background: var(--base-weak);
 
 	transition: all 0.3s;
 }
+
 .ui-kit-select-label-container-active {
 	position: absolute;
 	top: -7px;
-	z-index: 1;
 	left: 15px;
-	background: var(--base-weak);
+	z-index: 1;
+
 	line-height: 1;
+
+	background: var(--base-weak);
+
 	transition: all 0.3s;
 }
-
-
 
 .ui-kit-select-label {
 	color: var(--faint-strong);
@@ -31,3 +48,8 @@
 	font-size: var(--fs-xs);
 	line-height: 1;
 }
+
+.ui-kit-select-label-error {
+	color: var(--critic-strong);
+}
+
