fix(TextArea): hide scroll on chrome in windows if autoSize is on (w/o min and max rows)

--- a/src/components/TextArea/TextArea.css
+++ b/src/components/TextArea/TextArea.css
@@ -132,6 +132,10 @@
 	resize: none;
 }
 
+.ui-kit-textarea.autoSize.autoSize_noScroll {
+	overflow: hidden;
+}
+
 .ui-kit-textarea.gray.withLabel {
 	padding-top: 20px;
 	padding-bottom: 8px;
