fix(Input): fix styles when both label and placeholder

--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -76,6 +76,10 @@
 	color: var(--faint-middle);
 }
 
+.ui-kit-input-label-common.invisible {
+	color: transparent;
+}
+
 .ui-kit-input-label {
 	top: 0;
 	left: 14px;
