--- a/src/components/DatePicker/DatePicker.css
+++ b/src/components/DatePicker/DatePicker.css
@@ -76,7 +76,7 @@
 }
 
 .ui-kit-datepicker-label-common.disabled {
-	color: var(--faint-middle);
+	color: var(--faint-weak);
 }
 
 .ui-kit-datepicker-label.white {
@@ -194,7 +194,7 @@
 }
 
 .ui-kit-datepicker:disabled {
-	color: var(--faint-middle);
+	color: var(--faint-weak);
 
 	background-color: transparent;
 }
@@ -218,7 +218,7 @@
 }
 
 .ui-kit-datepicker-icon.disabled {
-	color: var(--faint-middle);
+	color: var(--faint-weak);
 }
 
 .ui-kit-datepicker-dropdown {
