--- a/src/components/TextArea/TextArea.css
+++ b/src/components/TextArea/TextArea.css
@@ -63,7 +63,7 @@
 }
 
 .ui-kit-textarea-label-common.disabled {
-	color: var(--faint-middle);
+	color: var(--faint-weak);
 }
 
 .ui-kit-textarea-label {
@@ -123,7 +123,7 @@
 }
 
 .ui-kit-textarea:disabled {
-	color: var(--faint-middle);
+	color: var(--faint-weak);
 
 	background-color: transparent;
 }
