--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -127,6 +127,8 @@
 	height: 100%;
 	padding: 14px;
 
+	font-weight: var(--fw-medium);
+
 	font-size: var(--fs-xs);
 
 	background-color: transparent;
