--- a/src/assets/SvgAssets.css
+++ b/src/assets/SvgAssets.css
@@ -6,10 +6,21 @@
 	background-color: rgb(194 194 194 / 0.2);
 }
 
-.svg-wrapper {
+.svg__container {
+	display: flex;
+	flex-direction: column;
+	gap: 30px;
+	align-items: flex-start;
+	justify-content: center;
+	width: 100%;
+
+	font-size: 12px;
+}
+
+.svg-section__wrapper {
 	display: flex;
 	flex-wrap: wrap;
-	gap: 20px;
+	gap: 10px;
 
 	font-size: 12px;
 }
