--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -19,11 +19,11 @@
 }
 
 .ant-table-container table > thead > tr:first-child th:first-child {
-	border-top-left-radius: var(--brad-base);
+	border-radius: var(--brad-base) 0 0 var(--brad-base);
 }
 
 .ant-table-container table > thead > tr:first-child th:last-child {
-	border-top-right-radius: var(--brad-base);
+	border-radius: 0 var(--brad-base) var(--brad-base) 0;
 }
 
 .ant-table-thead > tr > th,
